# chrome-review

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .vscode  CMakeLists.txt  NOTE  TODO  cpp-io.md  cpp-string-bytes-hex.cpp
Effective-Modern-C++/part1.DeducingTypes/: item1.md  item2.md  item4.md
Effective-Modern-C++/part2.auto/: item5.md
Link-Load-and-Library/: chapter11.runtime-library.md  chapter12.system-call-and-api.md  chapter2.compilation-and-linking.md  chapter6.executable-file-loading-and-process.md
agents/: AGENTS.md
aten/: CMakeLists.txt  main.cpp
benchmark/: README.md  arrival.py  benchmark-closeloop.py  benchmark-openloop.py  cli.py  cmdargs.py  dataset.py  engine.py  metrics.py  modelapi-append-cli.py  modelapi-append-txt.py  modelapi-append-vlm-streaming.py  modelapi-append-vlm.py  prefix_hit_profile.py
benchmark/cli/: __init__.py  ark_client.py  clients.py  constants.py  diffusion_client.py  http.py  messages.py  mock_client.py  modelapi_client.py  openai_client.py  payloads.py  sdk_chat.py  tokens.py  ultraman_client.py
benchmark/datasets/: __init__.py  base.py  jsonl.py  omni_multi_message.py  (+3 more)
bookmarks/: bookmarks_2022_9_9.html
bytedance/: bytedance.md  ocean-llm.py
cmake-cpp/: cpp-auto.md  merge-static-libs.md
cmake-cpp/avx/: .gitattributes  CMakeLists.txt  main.cpp
cmake-cpp/cmake-assembly-file/: CMakeLists.txt  main.cpp  sum_array.cpp
cmake-cpp/cmake-external-project/: CMakeLists.txt  README.md  main.cpp
cmake-cpp/cmake-install/: CMakeLists.txt  add-config.cmake.in
cmake-cpp/cmake-install/src/: hello-world-cmake-install.cpp
cmake-cpp/cmake-protobuf/: CMakeLists.txt  README.md  addressbook.proto  main.cpp
cmake-cpp/code-generation-and-cmake-secondary-construction/: CMakeLists.txt  main.cpp
cmake-cpp/code-generation-and-cmake-secondary-construction/code-generation/: CMakeLists.txt  main.cpp
cmake-cpp/cuda-demo/: CMakeLists.txt  cuda_func.cu  main.cpp
cmake-cpp/dnnl/: CMakeLists.txt  main.cpp
cmake-cpp/mlas-vs-dnnl/: CMakeLists.txt  main.cpp
cmake-ex-projects/: 1.py  CMakeLists.txt  boost-example.cpp  h5-example.cpp
cmake-protobuf/: addressbook.proto  main.cpp
cmake/cmake-install/: CMakeLists.txt
comm/: CMakeLists.txt  comm.h  def.h
comm/log/: log.h  log_api.h
comm/string/: string.h  string_utils.cpp  string_utils.h
comm/time/: date_api.cpp  date_api.h  time.h  timestamp_api.cpp  timestamp_api.h
comm/ttlstore/: dist_store.cpp  dist_store.h  ttlstore.h
cpp/: cpp-weak-ptr.md
cpp-python/call-python-function-in-cpp/: CMakeLists.txt  main.cpp
cpp-python/check-python-types-in-cpp/: 1.py  CMakeLists.txt
cpp-python/exchange-data-by-protobuf/: CMakeLists.txt  cr.proto  main.cpp  main.py  utils.cmake
cpp-python/pybind11-examples/: 1.py  CMakeLists.txt  main.cpp
cpp-python/python-extension/: CMakeLists.txt  main.cpp
cpr-basic-usage/: CMakeLists.txt
cpython-example/3/: 3.py  CMakeLists.txt  main.cpp
cr/: CMakeLists.txt  benchmark.cpp  benchmark.h  cr.h  main.cpp  npz.cpp  npz.h  stl.cpp  stl.h
cs/: fastapi-demo.py  fileserver.py  httpx-stream-proxy.py  redis-demo.py  socket-demo.py  zk-demo.py  zmq-demo.py
cuda/: exceptions.h
datasets/: cr.dataset.law_autotest.jsonl  cr.dataset.qa_out_0216_v3_300.json  cr.dataset.qa_out_formatted.jsonl
diffuser-models/: flask-diffusers.py
envs/: .zshrc  byted-proxy.sh  init-alias.sh  init-bytedance-env.sh  init-sys-env.sh  init-tencent-env.sh  init-tx.sh  init-vscode.sh  init-xlib-env.sh  init-zsh.sh  traecli.yaml  zshrc
etcdcpp/: CMakeLists.txt  example.cpp  example.py  launch-server.sh
exp/: CMakeLists.txt  experiment.cpp  experiment.cu
iree/: 1.py  export-model.py  matmul.mlir
llms/: activate-sglang  activate-trtllm  activate-vllm  benchmark-async.py  benchmark-models.py  benchmark-sync.py  count-datasets.py  counttks.py  format-datasets.py  llms.md  notes.md  run-openai-api.py  run-openai-api.sh  sglang.launch-server.help.txt
llvm-pass/: CMakeLists.txt  ir.ll  main.cpp
media/: benchmark-img-dec.py  convert-picture-format.py  crop-png.py  decode_demo.py  decode_heif.py  print-picture-info.py
mlir-example/: CMakeLists.txt  dialect.cpp  gtest_main.cpp  lower2llvm.cpp  main.cpp
mlir-example-py/: CMakeLists.txt  dialect.cpp  lower2llvm.cpp  main.cpp  pyc.cpp
mlir-example-py/include/: CMakeLists.txt  ops.td  passes.h
mooncake/: CMakeLists.txt  example.cpp  httpstore.cpp  mooncakebackend.cpp
nixl/: CMakeLists.txt  example.cpp  nixlbackend.cpp  nixlbackend.h
notes/: 20260308.md  algo-leecode.md  architect.md  chat.txt  cmake.md  cpu.md  cuda-gdb.md  cuda.md  dbg-deploy-env.md  dmesg.md  docker.md  dp-tp-ep-pp.md  gcc.md  glossary.md  gpu.md  interviewer.md  kvcache.md  linux-libc-libstdc++.md  llms.md  mac.md  media.md  mentor.md  ncu.md  nsight.md  pci.md  perf.md  read-assembly.md  single-point-of-failure.md  vscode.md  work.md  wxg.md  xdb.md
onnx/: conv.py  gen-and-run-onnx-model.py  io.py  matmul.py  print-onnx.py  replace_zip_map.py  roialign.py  run.py  scatter_nd.py
other-notes/: algo-leecode.md  read-assembly.md  testing.txt
pybind11-examples/: CMakeLists.txt
python/: analyze-nsys.py  asyncio-task.py  comp.py  cprofile-demo.py  demo-args.py  get-subprocess-out-and-err.py  print-color.py  print-npz-files.py  python1.md  rotatinglog.py
r/: CMakeLists.txt
r/rbenchmark/: CMakeLists.txt  rbenchmark_utils.cpp  rbenchmark_utils.h
r/rnpz/: CMakeLists.txt  main.cpp  rnpz.cpp  rnpz.h
r/rstl/: CMakeLists.txt  rstl.cpp  rstl.h
redis/: CMakeLists.txt  example.cpp  launch-server.sh  rediscpp.cpp  rediscpp.h
scripts/: activate-dirs  aggregate_ocean_babi.py  check-llm-api.py  docker-rmi.sh  echo-memory-limit.sh  elfinfo.sh  kill-all-tmux-session.sh  ls-safetensors.py  rm-subdir.sh  search-symbol.sh  split-log-by-hour.py
sh/: search-symbol.sh
tools/: echo-stack-limits.sh  echo-stack-usage.sh
ucx/: CMakeLists.txt  cli.cpp  example.cpp  svr.cpp  ucxbackend.cpp  ucxbackend.h  ucxtx.cpp  ucxtx.h
working/: luban-musicgen.py  luban-tokenizer.py
zmq/: CMakeLists.txt  example.cpp  zmqbackend.cpp  zmqbackend.h
(+396 files in other folders)
